--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<%= favicon_link_tag 'logo.png' %>
     <title>Blog</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+<body>
+	<div id="sidebar">
+		<div id="logo">
+			<%= link_to root_path do %>
+				<%= image_tag "logo.png" %>
+			<% end %>
+		</div>
+
+		<ul>
+			<li class="category">Website</li>
+			<li><%= link_to "Blog", root_path %></li>
+			<li>About</li>
+		</ul>
+
+  		<ul>
+			<li class="category">Social</li>
+			<li><a href="https://www.facebook.com/timing.chen">Facebook</a></li>
+			<li><a href="https://www.instagram.com/timingjl">Instagram</a></li>
+			<li><a href="https://github.com/TimingJL">Github</a></li>
+			<li><a href="mailto:eefozeo@gmail.com">Email</a></li>
+  		</ul>
+
+  		<p class="sign_in">Admin Login</p>
+  </div>
+
+  <div id="main_content">
+  	<div id="header">
+  		<p>All Posts</p>
+  		<div class="buttons">
+  			<%= link_to "New Post", new_post_path, class: "button" %>
+  			<button class="button">Log Out</button>
+  		</div>
+  	</div>
+
+  	<% flash.each do |name, msg| %>
+  		<%= content_tag(:div, msg, class: "alert") %>
+  	<% end %>
+  	<%= yield %>
+  </div>
+
+
+    
   </body>
 </html>
