--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,15 @@
-<h1 class="title">
-	<%= @post.title %>
-</h1>
+<div id="page_wrapper">
 
-<p class="data">
-	Submitted <%= time_ago_in_words(@post.created_at) %> Ago
-</p>
+	<h1 class="title">
+		<%= @post.title %>
+	</h1>
 
+	<p class="data">
+		Submitted <%= time_ago_in_words(@post.created_at) %> Ago
+	</p>
 
-<p class="body">
-	<%= @post.body %>
-</p>
+	<p class="body">
+		<%= @post.body %>
+	</p>
 
-
+</div>
