--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div id="page_wrapper">
+<div id="post_content">
 
 	<h1 class="title">
 		<%= @post.title %>
@@ -13,5 +13,13 @@
 	<p class="body">
 		<%= @post.body %>
 	</p>
+
+	<div id="comments">
+		<h2><%= @post.comments.count %> Comments</h2>
+		<%= render @post.comments %>
+
+		<h3>Add a comment:</h3>
+		<%= render "comments/form" %>
+	</div>	
 
 </div>
